# scicompt

./: Cargo.toml  README.md
examples/: test.rs
scicompt/: Cargo.toml
scicompt-consts/: Cargo.toml  consts.rs
scicompt-consts/src/: consts.rs  io.rs  main.rs
scicompt/examples/: lda.rs  svm.rs
scicompt/src/: consts.rs  distribution.rs  float.rs  integer.rs  kernel.rs  lda.rs  lib.rs  linear.rs  svm.rs
src/: distribution.rs  lib.rs  pca.rs  prime.rs  rational.rs  traits.rs
