[package]
name = "scicompt"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
netlib    = ["ndarray-linalg/netlib"]
openblas  = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]

[dependencies]
ndarray = "0.13.1"
num-traits = "0.2.12"

[dependencies.ndarray-linalg]
version = "0.12.1"
default-features = false